ProductionRoute.yaml
apiVersion: v1
kind: Route
metadata:
  name: www.myapache-site.com
spec:
  host: www.myapache-site.com
  to:
    kind: Service
    name: static-webserver
