route.yaml
apiVersion: v1
kind: Route
metadata:
  name: site
spec:
  to:
    kind: Service
    name: openshift-static-web
